Added api menu for customer
